--- a/user/vidyutsid/projects/custom website/style.css
+++ b/user/vidyutsid/projects/custom website/style.css
@@ -10,9 +10,8 @@
 }
 #top-nav a
 {
-    display:block;
+	font-size: 24px;
     color: #444;
-    text-align: center;
     padding: 10px;
     text-decoration: none;
 }
