--- a/user/vidyutsid/projects/custom website/style.css
+++ b/user/vidyutsid/projects/custom website/style.css
@@ -8,6 +8,10 @@
     overflow: hidden;
     background-color: #aaa;
 }
+body {
+	cursor: url(mouse.png), pointer;
+	background-color: #eee;
+}
 #top-nav a
 {
 	font-size: 24px;
@@ -25,14 +29,17 @@
 	color: #222;
 }
 #loader {
-	
+	position: fixed; 
+	width: 100%; 
+	height: 100%;
+	top: 0;
+	background-color: rgba(0,0,0,0.8);
+	z-index: 2; 
+	cursor: pointer;	
 }
 #side-bar {
 	
 }
 #main {
-	
-}
-#id {
 	
 }
