--- a/user/vidyutsid/projects/custom website/style.css
+++ b/user/vidyutsid/projects/custom website/style.css
@@ -60,7 +60,10 @@ width: 100%;
 height: 100%;	
 }
 #main {
-	
+	background-color: #ccc;
+	text-decoration: none;
+	font-size: medium;
+	padding: 10px;	
 }
 #featured {
 	
