--- a/user/vidyutsid/projects/custom website/style.css
+++ b/user/vidyutsid/projects/custom website/style.css
@@ -59,11 +59,13 @@ border: none;
 width: 100%;
 height: 100%;	
 }
-#main {
+#main 
+{
 	background-color: #ccc;
 	text-decoration: none;
 	font-size: medium;
-	padding: 10px;	
+	padding: 10px;
+		
 }
 #featured 
 {
