--- a/user/vidyutsid/projects/custom website/style.css
+++ b/user/vidyutsid/projects/custom website/style.css
@@ -1,7 +1,5 @@
 #top-nav {
-	position: fixed;
 	width: 100%;
-	top: 0;
 }
 #top-nav
 {
@@ -68,5 +66,15 @@ height: 100%;
 	width: 63%;
 }
 #featured {
-	
+background-color: #f1f1f1;
+  padding: 30px;
+  text-align: center;	
+}
+#featured iframe {
+	width: 100%;
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
