--- a/user/vidyutsid/projects/custom website/otherstyles.css
+++ b/user/vidyutsid/projects/custom website/otherstyles.css
@@ -11,3 +11,14 @@ body {
 	z-index: 2; 
 	cursor: pointer;	
 }
+a
+{
+	font-size: 24px;
+    color: #444;
+    padding: 10px;
+    text-decoration: underline;
+}
+a:hover
+{
+	color: #222;
+}
