--- a/user/vidyutsid/projects/custom website/style.css
+++ b/user/vidyutsid/projects/custom website/style.css
@@ -12,7 +12,7 @@ body {
 }
 #top-nav a
 {
-	font-size: 24px;
+	font-size: 36px;
     color: #444;
     padding: 10px;
     text-decoration: none;
@@ -36,6 +36,7 @@ body {
 	cursor: pointer;
 }
 #side-bar {
+	position: fixed;
 	float: left;
 	width: 30%;
 	background-color: #ddd;
@@ -45,22 +46,17 @@ body {
     background-color: #ccc;
     color: #000;
     display: block;
-    padding: 10px;
+    padding: 24px;
     text-decoration: none;
 }
 #side-bar a:hover
 {
     background-color: #bbb;
 }
-#side-bar iframe {
-border: none;
-width: 100%;
-height: 100%;
-}
 #main {
 	background-color: #ccc;
 	text-decoration: none;
-	font-size: medium;
+	font-size: 40px;
 	padding: 10px;
 	float: right;
 	width: 63%;
@@ -78,6 +74,13 @@ background-color: #f1f1f1;
 .sticky
 {
   position: fixed;
-  top: 0;
   width: 100%;
+}
+.sticky-top {
+	top: 0;
+}
+#footer {
+	background-color: #ccc;
+	text-align: center;
+	font-size: 32px;
 }
