--- a/user/vidyutsid/projects/custom website/otherstyles.css
+++ b/user/vidyutsid/projects/custom website/otherstyles.css
@@ -1,3 +1,21 @@
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+	border-radius: 10px;
+	background: #0000aa; 
+}
+::-webkit-scrollbar-track:hover {
+	background: #0000ff; 
+}
+ 
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background: #444; 
+}
+::-webkit-scrollbar-thumb:hover {
+	background: #555; 
+}
 body {
 	cursor: url(mouse.png), pointer;
 	background-color: #eee;
