--- a/user/vidyutsid/projects/custom website/software.css
+++ b/user/vidyutsid/projects/custom website/software.css
@@ -10,6 +10,11 @@
   color: white;
   border-radius: 0 5px 5px 0;
 }
+@media only screen and (max-width: 800px) {
+#mysidenav a {
+	left: 0;
+}	
+}
 #mysidenav a:hover
 {
   left: 0;
